# semchunk

./: CHANGELOG.md  LICENCE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/semchunk/: semchunk.py
