[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semchunk"
version = "4.0.0"
authors = [
    {name="Isaacus", email="hello@isaacus.com"},
    {name="Umar Butler", email="umar@isaacus.com"},
]
description = "A Python library for splitting text into smaller chunks while preserving as much local semantic context as possible."
readme = "README.md"
requires-python = ">=3.10"
license = {text="MIT"}
keywords = [
    "chunking",
    "splitting",
    "text",
    "split",
    "splits",
    "chunks",
    "chunk",
    "splitter",
    "chunker",
    "nlp",
    "ai",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dependencies = [
    "tqdm",
    "mpire[dill]",
]

[project.urls]
Homepage = "https://github.com/isaacus-dev/semchunk"
Documentation = "https://github.com/isaacus-dev/semchunk/blob/main/README.md"
Issues = "https://github.com/isaacus-dev/semchunk/issues"
Source = "https://github.com/isaacus-dev/semchunk"

[project.optional-dependencies]
ai = [
    "isaacus>=0.19.0",
]
tokenizers = [
    "tiktoken>=0.9.0",
    "transformers>=4.52.4",
]
all = [
    "isaacus>=0.19.0",
    "tiktoken>=0.9.0",
    "transformers>=4.52.4",
]

[tool.hatch.build.targets.sdist]
only-include = ['src/semchunk/__init__.py', 'src/semchunk/py.typed', 'src/semchunk/semchunk.py', 'pyproject.toml', 'README.md', 'LICENCE', 'CHANGELOG.md', 'tests/bench.py', 'tests/test_semchunk.py', '.github/workflows/ci.yml', 'tests/helpers.py']

[tool.ruff]
exclude = [
    "__pycache__",
    "develop-eggs",
    "eggs",
    ".eggs",
    "wheels",
    "htmlcov",
    ".tox",
    ".nox",
    ".coverage",
    ".cache",
    ".pytest_cache",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pybuilder",
    "__pypackages__",
    ".env",
    ".venv",
    "venv",
    "env",
    "ENV",
    "env.bak",
    "venv.bak",
    ".archive",
    ".persist_cache",
    "site-packages",
    "node_modules",
    "dist",
    "build",
    "dist-info",
    "egg-info",
    ".hatchling",
    ".bzr",
    ".direnv",
    ".git",
    ".git-rewrite",
    ".hg",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".vscode",
    "_build",
    "buck-out",
    "migrations",
    "target",
    "bin",
    "lib",
    "lib64",
    "include",
    "share",
    "var",
    "tmp",
    "temp",
    "logs",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
fixable = [
    "ALL",
]
unfixable = []
ignore = ["E741"]

[tool.ruff.lint.isort]
length-sort = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
lines-between-types = 1
order-by-type = false
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "datasets>=4.5.0",
    "hatch>=1.14.1",
    "ipykernel>=6.31.0",
    "isaacus>=0.19.0",
    "isort>=6.1.0",
    "nltk>=3.9.1",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "semantic-text-splitter>=0.27.0",
    "tiktoken>=0.9.0",
    "transformers>=4.52.4",
    "twine>=6.1.0",
]
